Fixed nav hover spacing

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  scroll-behavior: smooth;
 }
 
 /*
@@ -85,6 +86,8 @@ textarea {
    ========================================================================== */
 
 /* General Styles */
+
+
 body {
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
@@ -102,13 +105,6 @@ ol {
 a {
   color: #EEEFDA;;
   text-decoration: none;
-}
-
-nav a:hover {
-  background-color: #F8D697;
-  color: #453E4F;
-  padding: 10px 10px;
-  border-radius: 30px;
 }
 
 h1 {
@@ -316,6 +312,18 @@ header nav ul li {
   margin-bottom: 20px;
   font-weight: bold;
   text-transform: uppercase;
+  background-color: #152A3E;
+  color: #453E4F;
+  padding: 10px 10px;
+  border-radius: 30px;
+}
+
+header nav ul li:hover {
+  background-color:#F8D697;
+}
+
+header a:hover {
+  color:#152A3E;
 }
 
 nav #contact-link {
